added non deterministic debug compilation config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ list(APPEND NETWORK_INCLUDE_DIRECTORIES ${LAYER_FOLDER}/${OPTIMIZER_FOLDER})
 SET(COST_FUNCTIONS_FILES
 		costs.cu
 		GAE.cu
+		regularization.cu
 	)
 SET(COST_FUNCTIONS_FOLDER Costs)
 ADD_PREFIX_INPLACE(${COST_FUNCTIONS_FOLDER}/ COST_FUNCTIONS_FILES)
