--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,9 +109,10 @@ SET(SOCKET_FILES
 SET(SOCKET_FOLDER socket)
 list(APPEND NETWORK_INCLUDE_DIRECTORIES ${SOCKET_FOLDER})
 
-# Add linking to stdlib
-SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer")
+SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer -O3")
 SET(GCC_COVERAGE_LINK_FLAGS    "-lm -lstdc++")
+
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3")
 
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
