added optimizations while not in debug mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,10 +109,8 @@ SET(SOCKET_FILES
 SET(SOCKET_FOLDER socket)
 list(APPEND NETWORK_INCLUDE_DIRECTORIES ${SOCKET_FOLDER})
 
-SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer -O3")
+SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer")
 SET(GCC_COVERAGE_LINK_FLAGS    "-lm -lstdc++")
-
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3")
 
 SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
@@ -129,9 +127,14 @@ if (UNIX)
 	#set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -ccbin='g++-13'")
 endif()
 if (DEBUG)
-	set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G -g")
+	set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G -g -O0")
+	SET(GCC_COVERAGE_COMPILE_FLAGS "${GCC_COVERAGE_COMPILE_FLAGS} -O0")
 	add_compile_definitions("DEBUG")
 	message("-- Config debug")
+else()
+	set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O2")
+	SET(GCC_COVERAGE_COMPILE_FLAGS "${GCC_COVERAGE_COMPILE_FLAGS} -O2")
+	message("-- Added optimization")
 endif()
 
 set(CMAKE_CUDA_ARCHITECTURES "native")
