added PPO files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ list(APPEND NETWORK_INCLUDE_DIRECTORIES ${LAYER_FOLDER}/${OPTIMIZER_FOLDER})
 SET(COST_FUNCTIONS_FILES
 		costs.cu
 		GAE.cu
+		PPO.cu
 		regularization.cu
 	)
 SET(COST_FUNCTIONS_FOLDER Costs)
