--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,14 @@ SET(SOCKET_FILES
 SET(SOCKET_FOLDER socket)
 list(APPEND NETWORK_INCLUDE_DIRECTORIES ${SOCKET_FOLDER})
 
+SET(TEST_FILES
+	kernel.cu
+	test_env.cpp
+)
+SET(TEST_FOLDER tests)
+ADD_PREFIX_INPLACE(${TEST_FOLDER}/ TEST_FILES)
+list(APPEND NETWORK_INCLUDE_DIRECTORIES ${TEST_FILES})
+
 SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer")
 SET(GCC_COVERAGE_LINK_FLAGS    "-lm -lstdc++")
 
@@ -136,6 +144,10 @@ else()
 	SET(GCC_COVERAGE_COMPILE_FLAGS "${GCC_COVERAGE_COMPILE_FLAGS} -O2")
 	message("-- Added optimization")
 endif()
+if(DETERMINISTIC)
+	add_compile_definitions(DETERMINISTIC)
+	message("-- Deterministic value generation active")
+endif()
 
 set(CMAKE_CUDA_ARCHITECTURES "native")
 
@@ -143,12 +155,10 @@ project(NN LANGUAGES CUDA CXX)
 
 find_package(CUDAToolkit REQUIRED)
 include_directories("${CUDA_INCLUDE_DIRS} ${CUDAToolkit_INCLUDE_DIRS}")
-if(DETERMINISTIC)
-	add_compile_definitions(DETERMINISTIC)
-	message("-- Deterministic value generation active")
-endif()
+
 add_compile_definitions(INCLUDE_BACKEND)
 if(target STREQUAL "static")
+
 	set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -fPIC")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fPIC")
@@ -157,7 +167,9 @@ if(target STREQUAL "static")
 	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 				   COMMAND ${CMAKE_COMMAND} -E cmake_echo_color --cyan
 	 "Built Static Lib")
+
 elseif(target STREQUAL "socket")
+
 	message("-- Socket config added")
 	if (DEBUG)
 		add_compile_definitions(log_positive)
@@ -171,9 +183,10 @@ elseif(target STREQUAL "socket")
 	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E cmake_echo_color --cyan
 	"Built socket config")
+
 else()
 	message("-- Exe for testing added")
-	add_executable(${PROJECT_NAME} kernel.cu ${NECESSARY_COMPILATION_FILES})
+	add_executable(${PROJECT_NAME} ${NECESSARY_COMPILATION_FILES} ${TEST_FILES})
 endif()
 
 #target_link_libraries(${PROJECT_NAME} PUBLIC -lcurand)
