--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,7 @@ SET(TEST_FILES
 )
 SET(TEST_FOLDER tests)
 ADD_PREFIX_INPLACE(${TEST_FOLDER}/ TEST_FILES)
-list(APPEND NETWORK_INCLUDE_DIRECTORIES ${TEST_FILES})
+list(APPEND NETWORK_INCLUDE_DIRECTORIES ${TEST_FOLDER}/)
 
 SET(GCC_COVERAGE_COMPILE_FLAGS "-lm -lstdc++ -fanalyzer")
 SET(GCC_COVERAGE_LINK_FLAGS    "-lm -lstdc++")
